--- a/css/style.css
+++ b/css/style.css
@@ -68,12 +68,7 @@ header {
 
 /*---------------------- banner styles-------------- */
 
-/* .banner{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-} */
+
 .banner-text {
   margin: 0 auto;
   text-align: center;
@@ -108,7 +103,7 @@ header {
   gap: 24px;
 }
 
-.feature-text {
+.feature-text, .contact-text {
   padding: 70px;
 }
 
@@ -223,20 +218,6 @@ header {
 box-shadow: inset 240px 0 0 0 var(--primary-color);
     
 }
-
-/* box-shadow: inset 0 0 0 0 #54b3d6;
-color: #54b3d6;
-padding: 0 .25rem;
-margin: 0 -.25rem;
-transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-}
-a:hover {
-color: #fff;
-box-shadow: inset 200px 0 0 0 #54b3d6;;
-} */
-
-
-
 .card-title{
     font-size: 45px;
     margin: 5px 0;
@@ -246,4 +227,67 @@ box-shadow: inset 200px 0 0 0 #54b3d6;;
     font-weight: 600;
     color: var(--menu-text-color);
 
+}
+
+/* sponsor section styles */
+
+.sponsor-text{
+  text-align: center;
+}
+.sponsor-title{
+  font-size: 45px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.sponsor-icon-group{
+  display: flex;
+  justify-content: space-between;
+  margin: 50px 0;
+}
+.sponsor-icon-group > img{
+  filter: grayscale();
+}
+
+/* contact section styles  */
+
+.contact{
+  display: flex;
+  justify-content: space-evenly;
+  gap: 50px;
+  align-items: center;
+ 
+  
+}
+
+.contact-headline{
+  font-size: 45px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.contact-left-section, .contact-form{
+  width: 100%;
+}
+
+.contact-form{
+  border: 1px solid var(--primary-color);
+  padding: 15px;
+  background-color: var(--header-bg);
+  border-radius: 8px;
+}
+.contact-form > form{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+input[type="text"], input[type="email"] , input[type="tel"], textarea{
+  margin-bottom: 24px;
+  border: 1px solid var(--primary-color);
+  padding: 18px 30px;
+  border-radius: 8px;
+}
+label{
+  font-size: 20px;
+  font-weight: 500;
 }
