--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ a {
   color: var(--menu-text-color);
 }
 
+
 li {
   list-style: none;
 }
@@ -40,6 +41,12 @@ p {
   margin: 20px 0;
   font-size: 20px;
   font-weight: 600;
+  cursor: pointer;
+  transition: .3s;
+}
+.btn-primary:hover{
+transform: scale(1.1);
+
 }
 
 .container {
@@ -64,6 +71,13 @@ header {
   gap: 70px;
   font-size: 18px;
   font-weight: 500;
+}
+.nav-item{
+  transition: .3s;
+}
+.nav-item:hover{
+  transform: scale(1.3);
+ 
 }
 
 /*---------------------- banner styles-------------- */
@@ -269,6 +283,9 @@ box-shadow: inset 240px 0 0 0 var(--primary-color);
 .contact-left-section, .contact-form{
   width: 100%;
 }
+.contact-left-image{
+  text-align: center;
+}
 
 .contact-form{
   border: 1px solid var(--primary-color);
@@ -290,4 +307,17 @@ input[type="text"], input[type="email"] , input[type="tel"], textarea{
 label{
   font-size: 20px;
   font-weight: 500;
+}
+.msg-btn{
+  width: 80%;
+  margin: 0 auto;
+}
+
+/* footer styles  */
+
+.footer{
+  padding: 25px;
+  background-color: var(--footer-bg);
+  text-align: center;
+  margin-bottom: 100px;
 }
