--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ header {
   gap: 70px;
   font-size: 18px;
   font-weight: 500;
+  text-align: center;
 }
 .nav-item{
   transition: .3s;
@@ -91,7 +92,7 @@ header {
 }
 .banner-headline {
   color: var(--black);
-  font-size: 5vw;
+  font-size: 50px;
   font-weight: 700;
 }
 .banner-description,
@@ -123,7 +124,7 @@ header {
 
 .feature-headline {
   color: var(--menu-text-color);
-  font-size: 3vw;
+  font-size: 45px;
   font-weight: 500;
 }
 
@@ -136,7 +137,7 @@ header {
   font-weight: 700;
 }
 
-/* features list text styles */
+/* features items section  styles */
 .feature-section {
   display: flex;
   justify-content: space-between;
@@ -145,7 +146,7 @@ header {
   position: relative;
 }
 .feature-text .features-items-headline {
-  font-size: 2.8vw;
+  font-size: 45px;
   font-weight: 600;
   border-left: 5px solid var(--primary-color);
   padding-left: 20px;
@@ -181,18 +182,18 @@ header {
   background-color: var(--primary-color);
   width: 342px;
   height: 200px;
-  padding: 25px;
+  padding: 22px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: white;
   position: relative;
-  bottom: 30%;
-  left: 90%;
+ bottom: 200px;
+ left: 40%;
 }
 .floating-card-text > h1 {
-  font-size: 3vw;
+  font-size: 45px;
   font-weight: 700;
 }
 
@@ -320,4 +321,85 @@ label{
   background-color: var(--footer-bg);
   text-align: center;
   margin-bottom: 100px;
+}
+
+/* -------------------------responsive styles starts here------------------  */
+
+
+@media only screen and (max-width: 576px) {
+
+  .container{
+    padding: 30px 0;
+  }
+
+  .btn-primary{
+    font-size: 16px;
+    padding: 10px 15px;
+  }
+
+  /* header responsive */
+
+  .nav{
+    flex-direction: column;
+    align-items: center;
+  }
+  .nav-items > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: 20px;
+}
+
+/* banner responsive  */
+
+.banner-text{
+  width: 90%;
+}
+.banner-headline{
+  font-size: 35px;
+}
+
+/* quick list feature responsive */
+
+.quick-list-features {
+ flex-direction: column;
+}
+
+.feature-images {
+  
+  grid-template-columns: repeat(1, 1fr);
+  gap: 10px;
+}
+.feature-headline{
+  font-size: 35px;
+}
+
+.feature-text{
+  padding-bottom: 5px;
+}
+
+/* feature items section responsive */
+.feature-section {
+  flex-direction: column;
+}
+.feature-text .features-items-headline {
+  font-size: 35px;
+  
+}
+
+.feature-image img {
+  
+  width: 100%;
+}
+.floating-card-text {
+  
+  position: relative;
+ bottom: 100px;
+ left: 10%;
+}
+
+
+
 }
