--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,11 @@ transform: scale(1.1);
   padding: 60px 0;
 }
 
+.hr{
+  display: none;
+  margin-bottom: 30px;
+}
+
 /*------------------- header style------------------------  */
 
 header {
@@ -288,11 +293,13 @@ box-shadow: inset 240px 0 0 0 var(--primary-color);
   text-align: center;
 }
 
-.contact-form{
+/* .contact-form{ */
+form{
   border: 1px solid var(--primary-color);
-  padding: 15px;
+  padding: 25px;
   background-color: var(--header-bg);
   border-radius: 8px;
+  margin: 0 30px;
 }
 .contact-form > form{
   display: flex;
@@ -335,6 +342,9 @@ label{
   .btn-primary{
     font-size: 16px;
     padding: 10px 15px;
+  }
+  .hr{
+    display: block;
   }
 
   /* header responsive */
@@ -398,6 +408,54 @@ label{
   position: relative;
  bottom: 100px;
  left: 10%;
+}
+
+
+/* fact section responsive  */
+.fact-text{
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+.fact-card-group{
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  margin: 10px 0;
+  padding: 5px 0;
+}
+
+
+/* sponsor section responsive */
+
+.sponsor-icon-group{
+  flex-direction: column;
+  margin: 30px 0;
+  align-items: center;
+  gap: 30px;
+}
+
+
+/* contact responsive */
+
+.contact{
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+ 
+ 
+  
+}
+
+.contact-text{
+  text-align: center;
+}
+.contact-left-image > img{
+  object-fit: cover;
+  width: 100%;
 }
 
 
