--- a/css/style.css
+++ b/css/style.css
@@ -475,3 +475,80 @@ label{
 
 
 }
+
+@media only screen and (min-width: 577px) and (max-width: 768px){
+
+  .container{
+    padding: 30px 0;
+  }
+
+/* header responsive */
+
+.nav{
+  padding: 20px 20px;
+}
+.logo >h1 {
+    
+  font-size: 25px
+  }
+
+  /* quick list feature responsive */
+
+  .quick-list-features {
+    
+    flex-direction: column;
+ }
+
+ /* feature items section responsive */
+.feature-section {
+  flex-direction: column;
+}
+
+
+/* fact section responsive  */
+.fact-text{
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.fact-card-group{
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: center; */
+  align-items: center;
+  /* flex-direction: column; */
+  gap: 10px;
+  margin: 10px 0;
+  padding: 5px 0;
+}
+/* sponsor section responsive */
+
+.sponsor-icon-group{
+  padding: 50px;
+  flex-wrap: wrap;
+  margin: 30px 0;
+  align-items: center;
+  gap: 25px;
+}
+
+
+/* contact responsive */
+
+.contact{
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+ 
+  
+}
+.contact-text{
+  text-align: center;
+}
+.contact-left-image > img{
+  object-fit: cover;
+  width: 100%;
+}
+
+}
